# kaggle-competitions

./: .gitignore  README.md
Predict the Introverts from the Extroverts/: README.md  pyproject.toml
Predict the Introverts from the Extroverts/notebooks/: 00_eda.ipynb  00_univariate_eda.ipynb  01_multivariate_eda.ipynb  02_feature_engineering.ipynb  03_svm.ipynb  04_knn.ipynb  05_dt.ipynb  06_rf.ipynb  07_outlier_investigation.ipynb
Predict the Introverts from the Extroverts/src/playground_series_s5e7/: __init__.py  cli.py  feature_engineering.py  inference.py  schemas.py  training.py
Predict the Introverts from the Extroverts/src/playground_series_s5e7/feature_engineering/: v1.py
Predict the Introverts from the Extroverts/src/playground_series_s5e7/inference/: v1.py
Predict the Introverts from the Extroverts/src/playground_series_s5e7/training/: v1.py
