[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "playground_series_s5e7"
version = "1.0.0"
readme = "README.md"
description = "Source code for Kaggle's 'Predict the Introverts from the Extroverts' competition."
requires-python = ">=3.10"
dependencies = ["pandas>=2.3.1", "numpy>=2.2.0", "plotly>=6.2.0", "kaleido>=1.0.0", "scikit-learn>=1.7.0", "pandera>=0.25.0", "joblib>=1.5.0", "optuna>=4.4.0", "pyarrow>=21.0.0", "rich>=14.0.0"]

[project.scripts]
pg_s5e7 = "playground_series_s5e7:cli.entrypoint"
